[package]
name = "egui-wgpu-example"
version = "0.1.0"
#authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
authors = ["Nicolas Silvagni <galopin@gmail.com>"]
edition = "2021"

[dependencies]
egui-wgpu = "0.22"
chrono = "0.4"
pollster = "0.3"
egui = "0.22.0"
epi = "0.17"
egui-winit = "0.22"
wgpu = "0.16.1"
winit = { version = "0.28.6", features = ["x11"] }
egui_demo_lib = "0.22"

#[patch.crates-io]
# egui = { version = "0.5", git = "https://github.com/emilk/egui" }
# egui_wgpu_backend = { path = "../egui_wgpu_backend" }
# egui_winit_platform = { path = "../egui_winit_platform" }
